--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -104,16 +104,17 @@ interval=30
 color=#EEFFEE
 interval=10
 separator=false
+instance=ens33
 
 [wifi]
 label= 
-instance=wlp8s0
+instance=ens33
 interval=10
 border=#98971a
 
 [ethernet]
 label= E
-instance=enp7s0
+instance=ens33
 interval=10
 
 #[bandwidth]
