moved scripts to libexec directory

--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -36,7 +36,7 @@ border=#ffffff55
 #
 ##fortune
 [fortune]
-command=/home/krish/.config/i3/bin/fortune
+command=/usr/libexec/i3blocks/fortune
 min_width=600
 interval=60
 align=center
@@ -44,17 +44,19 @@ align=center
 
 # CMus
 [cmus]
-label= ♪
+label= ♪ 
 align=center
-command=/home/krish/.config/i3/bin/cmus
-interval=5
+command=/usr/libexec/i3blocks/cmus
+interval=1
 signal=13
+# separator_block_width=15
+min_width=15
 
 # Brightness indicator
 [bright]
 align=center
 label= ☀
-command=/home/krish/.config/i3/bin/bright
+command=/usr/libexec/i3blocks/bright
 interval=10
 signal=14
 border=#d79921
@@ -71,6 +73,7 @@ interval=5
 markup=pango
 border=#cc241d
 signal=12
+command= /usr/libexec/i3blocks/volume
 
 # Memory usage
 #
@@ -92,9 +95,12 @@ signal=12
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
 [disk]
-label=
-instance=/extra
+label=  
+instance=/
 interval=30
+command=/usr/libexec/i3blocks/disk/disk
+separator_block_width=5
+
 
 # Network interface monitoring
 #
@@ -105,15 +111,17 @@ color=#EEFFEE
 interval=10
 separator=false
 instance=ens33
+command=/usr/libexec/i3blocks/iface/iface
 
 [wifi]
 label= 
 instance=ens33
 interval=10
 border=#98971a
+command=/usr/libexec/i3blocks/wifi/wifi
 
 [ethernet]
-label= E
+label=  
 instance=ens33
 interval=10
 
@@ -138,7 +146,7 @@ interval=10
 #
 # The battery instance defaults to 0.
 [battery]
-command=/home/krish/.config/i3/bin/battery
+command=/usr/libexec/i3blocks/battery
 label= ⚡
 interval=10
 border=#458588
