--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -66,8 +66,7 @@ border=#d79921
 # The first parameter sets the step (and units to display)
 # The second parameter overrides the mixer selection
 # See the script for details.
-[volume 5% pulse]
-label= 🔊
+[volume pulse]
 instance=Master
 interval=5
 markup=pango
